--- a/src/style.scss
+++ b/src/style.scss
@@ -27,7 +27,6 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1rem;
     color: rgb(255, 255, 255);
-    background: var(--bg-color);
 }
 
 :root {
@@ -247,7 +246,7 @@ header {
     align-items: center;
     justify-content: center;
     width: 33.3333%;
-    background: var(--bg-success);
+    // background: var(--bg-success);
     padding: 1em;
     border-radius: 6px;
     border: solid 1px rgb(216, 216, 216);
